--- a/housekeeping/src/App.css
+++ b/housekeeping/src/App.css
@@ -8,6 +8,29 @@
   pointer-events: none;
 }
 
+.logo {
+  position: relative;
+  top: 50%;
+  left: 15px;
+}
+header {
+  display: block;
+  width: 100%;
+  height: 90px;
+  background: black;
+  color: white;
+}
+nav,
+nav ul,
+nav ul li {
+  margin: 0;
+  padding: 0;
+}
+nav {
+  position: absolute;
+  top: 50%;
+  right: 15px;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
