--- a/housekeeping/src/Assets/scss/_config.scss
+++ b/housekeeping/src/Assets/scss/_config.scss
@@ -1,3 +1,17 @@
+$black: #010000;
+$white: #ffffff;
+a {
+  text-decoration: none;
+  @include transition(0.4s ease-in-out);
+  cursor: pointer;
+  &:hover {
+    color: red;
+    @include transition(0.4s ease-in-out);
+  }
+}
+.container-fluid {
+  line-height: 24px;
+}
 @mixin translateY($e) {
   -webkit-transform: translateY($e);
   -moz-transform: translateY($e);
