--- a/housekeeping/src/Assets/scss/default.scss
+++ b/housekeeping/src/Assets/scss/default.scss
@@ -3,7 +3,7 @@ header {
   position: relative;
   display: block;
   width: 100%;
-  background: $black;
+  background: $white;
   color: $white;
   height: 90px;
   .logo {
@@ -21,22 +21,33 @@ header {
   }
   nav {
     position: absolute;
-    top: 50;
+    top: 50%;
     right: 15px;
     @include translateY(-50%);
 
     ul li {
       list-style-type: none;
       display: inline-block;
-      margin-right: 10px;
+      margin-right: 20px;
       &.last {
         margin: 0;
       }
       a {
         font-size: 19px;
         line-height: normal;
-        color: white;
       }
     }
+  }
+}
+body {
+  .image {
+    img {
+      padding: 20px;
+      max-width: 100%;
+      height: 400px;
+    }
+  }
+  .btn {
+    background-color: blue;
   }
 }
