--- a/housekeeping/src/Assets/scss/default.scss
+++ b/housekeeping/src/Assets/scss/default.scss
@@ -40,14 +40,26 @@ header {
   }
 }
 body {
-  .image {
-    img {
-      padding: 20px;
-      max-width: 100%;
-      height: 400px;
+  margin: 0;
+  .slide {
+    background-image: url("../images/002.jpg");
+    /* Center and scale the image nicely */
+    background-position: center center;
+    background-size: cover;
+    height: 80vh;
+    position: relative;
+    top: 0;
+    bottom: 0;
+    color: $white;
+    .title1 {
+      position: relative;
+      text-align: center;
+      padding-top: 5%;
+      .btn {
+        margin-top: 10%;
+
+        position: relative;
+      }
     }
-  }
-  .btn {
-    background-color: blue;
   }
 }
